fixed harry's stretched-out face

--- a/about_styles.scss
+++ b/about_styles.scss
@@ -30,22 +30,26 @@
 
 
 /* profile pic css */
-.profile-pic > img {
-  width:  250px;
-  height: 250px; 
-  margin-top: -290px;
+.profile-pic {
+  width: 250px;
+  height: 250px;
+  margin-top: -255px;
+  overflow: hidden;
+  img {
+    width: 100%;
+  }
 }
 
 
 /* middle navigation css */
 .middle-nav {
-  margin-top: -50px;
+  margin-top: -30px;
   z-index: -1;
   border: 2px solid black;
 }
 
 .img-bucket {
-  width: 280px;
+  width: 250px;
   height: 42px;
 }
 
